--- a/public/app/components/Profile/profiles.css
+++ b/public/app/components/Profile/profiles.css
@@ -1,3 +1,9 @@
+section{
+    display: flex;
+    flex-direction:column;
+    justify-content: space-around;
+    align-items: center;
+}
 .my-profiles{
     display: flex;
     flex-direction: row;
